All in components

--- a/static/config.json
+++ b/static/config.json
@@ -8,6 +8,7 @@
     },
     "components": [
         {"id": "navbar"} ,
+        {"id": "map"} ,
         {"id": "sidebar", "components": { "id": "treelayer" }}
     ]
 }
