--- a/static/config.json
+++ b/static/config.json
@@ -1,6 +1,6 @@
 {
     "application": {
-        "title": "mviewer bt4"
+        "title": "mviewer next"
     },
     "mapoptions": {
         "center": [-280683.49531344074, 6112461.814273552],
